--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,7 +5,7 @@ pipeline {
     stage('Checkout') {
       steps {
         sh 'echo passed'
-        //git branch: 'main', url: 'https://github.com/SelvaDev23/java-maven-argocd.git'
+        //git branch: 'master', url: 'https://github.com/SelvaDev23/java-maven-argocd.git'
       }
     }
     stage('Build and Test') {
